syntax = "proto3";

package partner.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/protobuf/duration.proto";
import "partner/service/v1/user.proto";

option go_package = "api/partner/service/v1;v1";

service PartnerService {
  rpc AddTeam (Team) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/team/add",
      body: "*"
    };
  }

  rpc DeleteTeam (DeleteTeamReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/team/delete",
      body: "*"
    };
  }

  rpc UpdateTeam (UpdateTeamReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/team/update",
      body: "*"
    };
  }

  rpc GetTeam (GetTeamReq) returns (GetTeamResponse){
    option (google.api.http) = {
      get: "/api/team/get",
    };
  }

  rpc GetTeamList (GetTeamListReq) returns (GetTeamListResponse){
    option (google.api.http) = {
      get: "/api/team/list",
    };
  }

  rpc JoinTeam (JoinTeamReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/team/join",
      body: "*"
    };
  }

  rpc QuitTeam (QuitTeamReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/team/quit",
      body: "*"
    };
  }

}

message GetTeamResponse{
  Team data = 1;
}

message GetTeamListResponse{
  message TeamInfo{
    Team team = 1;
    user.v1.User userInfo = 2;
  }
  repeated TeamInfo data = 1;
}

message DeleteTeamReq{
  int32 id = 1;
}

message UpdateTeamReq{
  string name = 1;
  string expireTime = 2;
  int32 status = 3;
  string password = 4;
  string description = 5;
}

message GetTeamReq{
  int32 id = 1;
}

message GetTeamListReq{
  int32 page = 1;
  int32 pageSize = 2;
  Team query = 3;
}

message JoinTeamReq{
  int32 id = 1;
  string passWord = 2;
}

message QuitTeamReq{
  int32 id = 1;
}

message Team{
  int32 id = 1;
  string name = 2;
  int32 maxNum = 3;
  string expireTime = 4;
  int32 userId = 5;
  int32 status = 6;
  string password = 7;
  string description = 8;
}