syntax = "proto3";

package user_error.v1;
import "errors/errors.proto";

option go_package = "api/partner/service/v1/pb;v1";

enum UserErrorReason {
  option (errors.default_code) = 500;

  UNKNOWN_ERROR = 0;
  //  Get_Account_Failed = 1 [(errors.code) = 401];
  VALIDATE_ERROR = 1;
  ACCOUNT_EXIST = 2;
  ACCOUNT_ILLEGAL = 3;
  USER_REGISTER_FAILED = 4;
  USER_LOGIN_FAILED = 5;
  USER_SEARCH_FAILED = 6;
  USER_DELETE_FAILED = 7;
  LOGIN_STATE_TIMEOUT = 9;
  USER_LOGOUT_FAILED = 10;
  USER_TAGS_EMPTY = 11;
  UPDATE_USER = 12;
  USERS_RECOMMEND_FAILED = 13;
}
